--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
-.App,
-input {
-  margin: 16px 0;
+.App {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  padding: 16px;
+}
+
+@media (max-width: 600px) {
+  .App .panorama-wrapper {
+    width: 100% !important;
+  }
 }
