--- a/src/components/Panorama/Panorama.css
+++ b/src/components/Panorama/Panorama.css
@@ -71,3 +71,33 @@
 .panorama-control--btn__group .panorama-control--btn:last-of-type {
   border-radius: 0 0 3px 3px;
 }
+
+.panorama-scan {
+  margin: auto;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 1px solid rgb(255, 255, 255);
+  position: absolute;
+  overflow: hidden;
+  right: 10px;
+  top: calc(50% - 10px);
+}
+.panorama-scan::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-top: 13px solid #ffffff;
+  border-right: 10px solid transparent;
+  border-left: 10px solid transparent;
+}
+.panorama-scan::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: conic-gradient(#000000, #ffffff);
+  filter: opacity(50%) brightness(120%);
+}
