--- a/src/components/Panorama/Panorama.css
+++ b/src/components/Panorama/Panorama.css
@@ -1,6 +1,7 @@
 .panorama-wrapper {
   position: relative;
-  background-color: #ebebeb;
+  background-color: #000000;
+  z-index: 88;
 }
 
 .panorama-wrapper.fullscreen {
@@ -13,31 +14,24 @@
 }
 
 .panorama-control {
-  top: 0;
-  left: 0;
+  bottom: 0;
+  left: 10px;
   position: absolute;
-  padding: 5px;
-}
-
-.panorama-wrapper.fullscreen .panorama-control--wrapper {
-  padding-top: 10px;
+  margin-bottom: 10px;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+  padding: 0 10px;
 }
 
 .panorama-control--wrapper {
   display: flex;
   align-items: center;
-  flex-direction: column;
-  padding-top: 5px;
-}
-
-.panorama-wrapper.fullscreen .panorama-control--btn {
-  margin-left: 10px;
 }
 
 .panorama-control--btn {
   cursor: pointer;
-  background-color: #fff;
-  border: 1px solid #999;
+  background-color: transparent;
+  border: 0;
   border-color: rgba(0, 0, 0, 0.4);
   border-radius: 3px;
   width: 30px;
@@ -46,10 +40,11 @@
   justify-content: center;
   align-items: center;
   padding: 0;
+  color: #ffffff;
 }
 
 .panorama-control--btn:disabled {
-  opacity: 0.8;
+  opacity: 0.3;
   cursor: default;
 }
 
@@ -57,47 +52,127 @@
   font-size: 20px;
 }
 
-.panorama-control--btn__group {
-  margin-top: 5px;
+.panorama-wrapper.fullscreen .panorama-control--btn {
+  width: 40px;
+  height: 40px;
 }
 
-.panorama-control--btn__group .panorama-control--btn {
-  margin-bottom: -1px;
-  border-radius: 0;
-}
-.panorama-control--btn__group .panorama-control--btn:first-of-type {
-  border-radius: 3px 3px 0 0;
-}
-.panorama-control--btn__group .panorama-control--btn:last-of-type {
-  border-radius: 0 0 3px 3px;
+.panorama-wrapper.fullscreen .panorama-control--btn__icon {
+  font-size: 25px;
 }
 
-.panorama-scan {
-  margin: auto;
-  width: 30px;
-  height: 30px;
+.panorama-radar {
+  position: absolute;
+  top: calc(50% - 14px);
+  right: 8px;
+  z-index: 99;
+  height: 35px;
+  width: 35px;
+  background-color: #000000;
   border-radius: 100%;
-  border: 1px solid rgb(255, 255, 255);
+  opacity: 0.5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.panorama-radar i:first-of-type {
+  display: block;
+  width: 25px;
+  height: 25px;
+  border: 2px solid #fff;
+  border-radius: 100%;
+  position: relative;
+}
+
+.panorama-radar i:first-of-type::after {
+  content: "";
+  border-bottom: 6px solid #ffffff;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  position: absolute;
+  top: -5px;
+  left: calc(50% - 6px);
+}
+
+.panorama-wrapper.fullscreen .panorama-radar i:first-of-type::after {
+  border-bottom: 12px solid #ffffff;
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  position: absolute;
+  top: -7px;
+  left: calc(50% - 12px);
+}
+
+.panorama-radar i:first-of-type::before {
+  content: "";
+  width: 27px;
+  height: 13px;
+  background-color: #000000;
+  position: absolute;
+  opacity: 0.5;
+  bottom: -3px;
+  left: -4px;
+}
+
+.panorama-wrapper.fullscreen .panorama-radar {
+  width: 55px;
+  height: 55px;
+}
+
+.panorama-wrapper.fullscreen .panorama-radar i:first-of-type {
+  width: 44px;
+  height: 44px;
+}
+
+.panorama-wrapper.fullscreen .panorama-radar i:first-of-type::before {
+  width: 50px;
+  height: 24px;
+}
+
+.panorama-radar i:last-of-type {
+  width: 21px;
+  height: 21px;
+  background-color: #000000;
+  border-radius: 100%;
   position: absolute;
   overflow: hidden;
-  right: 10px;
-  top: calc(50% - 10px);
+  border: 1px solid;
 }
-.panorama-scan::after {
+
+.panorama-wrapper.fullscreen .panorama-radar i:last-of-type {
+  width: 40px;
+  height: 40px;
+}
+
+.panorama-radar i:last-of-type::after {
+  content: "";
+  border-top: 19px solid #ffffff;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  position: absolute;
+  top: 0;
+  left: calc(50% - 5px);
+  z-index: 3;
+}
+
+.panorama-wrapper.fullscreen .panorama-radar i:last-of-type::after {
+  border-top: 19px solid #ffffff;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  left: calc(50% - 15px);
+}
+
+.panorama-radar i:last-of-type::before {
   content: "";
   position: absolute;
-  width: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  border-top: 13px solid #ffffff;
-  border-right: 10px solid transparent;
-  border-left: 10px solid transparent;
-}
-.panorama-scan::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: conic-gradient(#000000, #ffffff);
-  filter: opacity(50%) brightness(120%);
+  background-color: #ffffff;
+  width: 8px;
+  height: 8px;
+  border-radius: 10px;
+  top: calc(50% - 3.5px);
+  left: calc(50% - 4px);
+  border: 2px solid #000000;
+  z-index: 4;
 }
