custom loader, error msg, change theme radar

--- a/src/components/Panorama/Panorama.css
+++ b/src/components/Panorama/Panorama.css
@@ -70,7 +70,7 @@
   width: 35px;
   background-color: #000000;
   border-radius: 100%;
-  opacity: 0.5;
+  opacity: 0.8;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -148,12 +148,12 @@
 
 .panorama-radar i:last-of-type::after {
   content: "";
-  border-top: 19px solid #ffffff;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
+  border-top: 12px solid #ffffff;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
   position: absolute;
   top: 0;
-  left: calc(50% - 5px);
+  left: calc(50% - 8px);
   z-index: 3;
 }
 
@@ -175,4 +175,77 @@
   left: calc(50% - 4px);
   border: 2px solid #000000;
   z-index: 4;
+}
+
+.panorama-error {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.panorama-error--text {
+  color: #ffffff;
+  word-break: break-all;
+  min-width: 100px;
+  max-width: 300px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  user-select: none;
+}
+
+.panorama-error strong {
+  color: rgb(255, 117, 117);
+  display: block;
+}
+
+.panorama-error a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.panorama-loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.panorama-loader--wrapper {
+  position: relative;
+}
+
+.panorama-loader--main {
+  width: 100px;
+  height: 8px;
+  background-color: #2e2e2e;
+  border: 1px solid #cac6c6;
+}
+
+.panorama-loader--progress {
+  height: 8px;
+  background-color: #ffffff;
+  animation: loader 5s forwards;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@keyframes loader {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
 }
